--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           STAR, an armored space
           station with enough power
           to destroy an entire planet.
-
+ 1
           Pursued by the Empire's
           sinister agents, Princess
           Leia races home aboard her
@@ -46,6 +46,6 @@
         </pre>
       </div>
     </main>
-
+    <script type="module" src="starwars.js"></script>
   </body>
 </html>
